--- a/views/home.erb
+++ b/views/home.erb
@@ -1,102 +1,79 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Le Wagon x Audencia</title>
+    <title>My playground landing</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link href='style.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,900|Open+Sans:300,400,700" rel="stylesheet">
-    <link href="/style.css" rel='stylesheet'>
   </head>
-
   <body>
+
     <div id="banner">
-      <img src="images/logo.png" alt="" width="70px">
-      <h1>5 days Bootcamp</h1>
-      <p>Learn digital languages to create your projects</p>
-      <a href="#wufoo-sx0l84z1iszo7g" class="btn btn-lg btn-red">I want more</a>
-    </div>
+    <h1>How to kitsch ?</h1>
+    <p>Un programme simple et efficace en 4 points chocs !</p>
+    <p>Les plus grands experts valident <br>
+    Seulement 19.99€/mois sans engagements ! Profitez-en dès maintenant.</p>
+    <p>
+      <a href="http://eelslap.com/" target='_blank' class="btn btn-danger">Click here to slap a face</a>
+    </p></div>
+    
 
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-html5-plain colored icon-size"></i>
-            <h2>HTML</h2>
-            <p>A project always starts with<strong> the content</strong>.</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-css3-plain colored icon-size"></i>
-            <h2>CSS</h2>
-            <p>Define your identity, create your <strong>brand design</strong></p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-ruby-plain colored icon-size"></i>
-            <h2>RUBY</h2>
-            <p>You want to shine, now you can add <strong>some algorithms</strong></p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-rails-plain colored icon-size"></i>
-            <h2>RAILS</h2>
-            <p>A framework to help you <strong>build an app</strong></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="cta text-center">
-      <h2>Maybe you need some inspiration</h2>
-      <p>Type a word and try our solution</p>
-
-      <form action="/search" method="get" class="form-inline">
-        <input type="text" name="query" placeholder="Search dribbles..." class="form-control">
-        <input type="submit" value="Search" class="btn btn-red">
+    <form action="/search" method="get" class="form-inline">
+        <input name="query" placeholder="Search dribbles..." class="form-control" type="text">
+        <input value="Search" class="btn btn-red" type="submit">
       </form>
-    </div>
+      
 
-    <!-- Form -->
+  <div class="container">
+
     <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div id="gif"></div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div id="wufoo-sx0l84z1iszo7g">
-          Fill out my <a href="https://pedrolane.wufoo.com/forms/sx0l84z1iszo7g">online form</a>.
-        </div>
-      </div>
-    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
 
-    <div id="footer" >
-      <p>This is a playground landing ©Le Wagon</p>
-      <ul class="list-inline">
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-      </ul>
-    </div>
+      <div class="icone"><img src="images/briefcase.png" alt="picture description" width="100">
+      <h2>Travail</h2>
+      <p>J'aimerai bien avoir une petite mallette comme celle-ci.</p></div>
 
-    <!-- For Wuffo form -->
-    <script type="text/javascript">
-      var sx0l84z1iszo7g;(function(d, t) {
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+      
+      <div class="icone"><img src="images/diamond.png" alt="picture description" width="100">
+      <h2>Money money</h2>
+      <p>Ne représente pas mon compte en banque actuellement</p></div>
+
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+      
+      <div class="icone"><img src="images/heart.png" alt="picture description" width="100">
+      <h2>Awesome</h2>
+      <p>C'est ce que tout le monde dit de moi.</p></div>
+
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+      
+      <div class="icone"><img src="images/laptop.png" alt="picture description" width="100">
+      <h2>Cinéma</h2>
+      <p>J'adooore regarder des films. C'est très bien comme activité.</p></div>
+
+    </div>
+  </div>
+</div>
+
+  </div>
+
+
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2" id="contact">
+      
+            <div id="wufoo-z1poknyo0wth1ao">
+      Fill out my <a href="https://plansac.wufoo.com/forms/z1poknyo0wth1ao">online form</a>.
+      </div>
+      <script type="text/javascript">var z1poknyo0wth1ao;(function(d, t) {
       var s = d.createElement(t), options = {
-      'userName':'pedrolane',
-      'formHash':'sx0l84z1iszo7g',
+      'userName':'plansac',
+      'formHash':'z1poknyo0wth1ao',
       'autoResize':true,
-      'height':'517',
+      'height':'685',
       'async':true,
       'host':'wufoo.com',
       'header':'show',
@@ -104,9 +81,22 @@
       s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
       s.onload = s.onreadystatechange = function() {
       var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-      try { sx0l84z1iszo7g = new WufooForm();sx0l84z1iszo7g.initialize(options);sx0l84z1iszo7g.display(); } catch (e) {}};
+      try { z1poknyo0wth1ao = new WufooForm();z1poknyo0wth1ao.initialize(options);z1poknyo0wth1ao.display(); } catch (e) {}};
       var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-      })(document, 'script');
-    </script>
+      })(document, 'script');</script>
+
+
+
+  </div>
+
+    <div id="footer"><p>This is a playground landing ©Le Wagon 
+    <br>
+
+    <a href="#"><i class="fa fa-youtube"></i></a>
+    <a href="https://www.facebook.com/pauline.lansac.5" target='_blank'><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/pauline-lansac-758b91135/" target='_blank'><i class="fa fa-linkedin"></i></a></p></div>
+
   </body>
+
 </html>
