--- a/views/search.erb
+++ b/views/search.erb
@@ -13,6 +13,27 @@
   </head>
 
   <body>
+
+    <div class="row" id="banner">
+      <div class="col-md-3">
+        <img src="images/bichette2.png" alt="picture description" height="200">
+      </div>
+
+      <div class="col-md-6">
+        <h1>Have fun and conquer space</h1>
+        <p>Un programme simple et efficace en 4 points chocs !</p>
+        <p>Les plus grands experts valident <br>
+          Seulement 19.99€/mois sans engagements ! Profitez-en dès maintenant.</p>
+        <p><a href="http://eelslap.com/" target='_blank' class="btn btn-danger">Click here to slap a face</a>
+        </p>
+      </div>
+
+      <div class="col-md-3 hidden-xs-down">
+        <img src="images/bichette2.png" alt="picture description" height="200">
+      </div>
+
+    </div>
+
     <div class="container-full">
       <div class="row">
         <% @cards.each do |card| %>
@@ -25,5 +46,17 @@
         <% end %>
       </div>
     </div>
+
+    <div id="footer">
+      <p>This is a playground landing ©Le Wagon 
+        <br>
+
+        <a href="https://www.instagram.com/ppointfinal/?hl=fr" target='_blank'><i class="fa fa-instagram"></i></a>
+        <a href="https://www.facebook.com/pauline.lansac.5" target='_blank'><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/PPointfinal" target='_blank'><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/pauline-lansac-758b91135/" target='_blank'><i class="fa fa-linkedin"></i></a>
+      </p>
+    </div>
+    
   </body>
 </html>
