--- a/views/search.erb
+++ b/views/search.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="col-md-6">
-        <h1>Have fun and conquer space</h1>
+        <a href="home.erb"><h1>Have fun and conquer space</h1></a>
         <p>Un programme simple et efficace en 4 points chocs !</p>
         <p>Les plus grands experts valident <br>
           Seulement 19.99€/mois sans engagements ! Profitez-en dès maintenant.</p>
@@ -38,7 +38,7 @@
     <div class="container-full">
       <div class="row">
         <% @cards.each do |card| %>
-          <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="col-xs-12 col-sm-6 col-md-3 icone">
             <a href="<%= card[1] %>" target="_blank">
               <h3><%= card[0] %></h3>
               <img src="<%= card[2] %>" class="img-rounded">
@@ -58,6 +58,6 @@
         <a href="https://www.linkedin.com/in/pauline-lansac-758b91135/" target='_blank'><i class="fa fa-linkedin"></i></a>
       </p>
     </div>
-    
+
   </body>
 </html>
