--- a/views/search.erb
+++ b/views/search.erb
@@ -35,18 +35,22 @@
 
     </div>
 
-    <div class="container-full">
-      <div class="row">
-        <% @cards.each do |card| %>
-          <div class="col-xs-12 col-sm-6 col-md-3 icone">
-            <a href="<%= card[1] %>" target="_blank">
-              <h3><%= card[0] %></h3>
-              <img src="<%= card[2] %>" class="img-rounded">
-            </a>
-          </div>
-        <% end %>
+
+    <div id="content">
+      <div class="container-full">
+        <div class="row">
+          <% @cards.each do |card| %>
+            <div class="col-xs-12 col-sm-6 col-md-3 icone">
+              <a href="<%= card[1] %>" target="_blank">
+                <h3><%= card[0] %></h3>
+                <img src="<%= card[2] %>" class="img-rounded">
+              </a>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
+    
 
     <div id="footer">
       <p>This is a playground landing ©Le Wagon 
