--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ h1{
   text-shadow: 2px 2px 1px rgba(0,0,0,0.5);
 }
 
-h2 {
+h2 h3{
   font-family: Courier;
   color: #626f92;
   font-weight: bold;
