--- a/views/search.erb
+++ b/views/search.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="col-md-6">
-        <a href="home.erb"><h1>Have fun and conquer space</h1></a>
+        <a href="http://kitchenette.cleverapps.io/"><h1>Have fun and conquer space</h1></a>
         <p>Un programme simple et efficace en 4 points chocs !</p>
         <p>Les plus grands experts valident <br>
           Seulement 19.99€/mois sans engagements ! Profitez-en dès maintenant.</p>
@@ -37,7 +37,7 @@
 
 
     <div id="content">
-      <div class="container-full">
+      <div class="container">
         <div class="row">
           <% @cards.each do |card| %>
             <div class="col-xs-12 col-sm-6 col-md-3 icone">
