définition css pour titre des cartes

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,16 @@ h1{
   text-shadow: 2px 2px 1px rgba(0,0,0,0.5);
 }
 
-h2 h3{
+h2 {
+  font-family: Courier;
+  color: #626f92;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+ font-variant: small-caps;
+}
+
+h3 {
   font-family: Courier;
   color: #626f92;
   font-weight: bold;
