Changement taille des cartes

--- a/views/search.erb
+++ b/views/search.erb
@@ -43,7 +43,7 @@
             <div class="col-xs-12 col-sm-6 col-md-3 icone">
               <a href="<%= card[1] %>" target="_blank">
                 <h3><%= card[0] %></h3>
-                <img src="<%= card[2] %>" class="img-rounded">
+                <img src="<%= card[2] %>" class="img-rounded" width="150">
               </a>
             </div>
           <% end %>
