ajout champs recherche su page search

--- a/views/search.erb
+++ b/views/search.erb
@@ -35,6 +35,13 @@
 
     </div>
 
+    <div class="search">
+      <form action="/search" method="get" class="form-inline">
+        <input name="query" placeholder="Search dribbles..." class="form-control" type="text">
+        <input value="Search" class="btn btn-danger" type="submit">
+      </form>
+    </div>
+
 
     <div id="content">
       <div class="container">
